--- a/config/database.yml
+++ b/config/database.yml
@@ -80,5 +80,10 @@ test:
 production:
   <<: *default
   database: todo_list_app_production
-  username: todo_list_app
-  password: <%= ENV["TODO_LIST_APP_DATABASE_PASSWORD"] %>
+  # username: todo_list_app
+  # password: <%= ENV["TODO_LIST_APP_DATABASE_PASSWORD"] %>
+  idle_timeout: 60
+  port: 5432
+  username: postgres
+  password: rails
+  host: 15.206.194.255
